--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,30 +1,26 @@
 [package]
-name = "async-session"
-version = "3.0.0"
+name = "typed-session"
+version = "0.1.0"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/http-rs/async-session"
-documentation = "https://docs.rs/async-session"
-description = "Async session support with pluggable middleware"
+repository = "https://github.com/ISibboI/typed-session"
+documentation = "https://docs.rs/typed-session"
+description = "Async typed session middleware"
 readme = "README.md"
-edition = "2018"
-keywords = []
-categories = []
+edition = "2021"
+keywords = ["async", "typed", "session", "middleware"]
+categories = ["web-programming"]
 authors = [
-  "Yoshua Wuyts <yoshuawuyts@gmail.com>",
-  "Jacob Rothstein <hi@jbr.me>"
+    "Sebastian Schmidt <isibboi@gmail.com>",
+    "Yoshua Wuyts <yoshuawuyts@gmail.com>",
+    "Jacob Rothstein <hi@jbr.me>"
 ]
 
 [dependencies]
 async-trait = "0.1.57"
 rand = "0.8.5"
-base64 = "0.13.0"
-sha2 = "0.10.6"
-hmac = "0.12.1"
-serde_json = "1.0.85"
-bincode = "1.3.3"
 anyhow = "1.0.65"
 blake3 = "1.3.1"
-async-lock = "2.5.0"
+# async-lock = "2.5.0"
 log = "0.4.17"
 
 [dependencies.serde]
