--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,7 @@ async-trait = "0.1.57"
 rand = "0.8.5"
 anyhow = "1.0.65"
 blake3 = "1.3.1"
-# async-lock = "2.5.0"
-log = "0.4.17"
+tracing = "0.1.37"
 
 [dependencies.serde]
 version = "1.0.145"
