--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,12 +9,12 @@ env:
 
 jobs:
   build_and_test:
-    name: Build and test
+    name: Check, test, docs, format and lint
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, macOS-latest]
-        rust: [stable, nightly]
+        rust: [stable, beta, nightly]
 
     steps:
     - uses: actions/checkout@master
@@ -23,42 +23,33 @@ jobs:
       uses: actions-rs/toolchain@v1
       with:
         toolchain: ${{ matrix.rust }}
+        components: rustfmt, clippy
         override: true
 
-    - name: check
-      uses: actions-rs/cargo@v1
-      with:
-        command: check
-        args: --all --bins --examples
-
-    - name: check unstable
+    - name: Check
       uses: actions-rs/cargo@v1
       with:
         command:  check
         args: --all --benches --bins --examples --tests
 
-    - name: tests
+    - name: Test
       uses: actions-rs/cargo@v1
       with:
         command: test
         args: --all
 
-  check_fmt_and_docs:
-    name: Checking fmt and docs
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        rust: [ stable, nightly ]
-    steps:
-    - uses: actions/checkout@master
-    - uses: actions-rs/toolchain@v1
-      with:
-        toolchain: ${{ matrix.rust }}
-        components: rustfmt, clippy
-        override: true
-
-    - name: fmt
-      run: cargo fmt --all -- --check
-
     - name: Docs
-      run: cargo doc
+      uses: actions-rs/cargo@v1
+      with:
+        command: doc
+
+    - name: Format
+      uses: actions-rs/cargo@v1
+      with:
+        command: fmt -- --check
+
+    - name: Lint
+      uses: actions-rs/cargo@v1
+      with:
+        command: clippy --all-targets --all-features
+        args: --all
