--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macOS-latest]
-        rust: [stable, beta, nightly]
+        rust: [1.65.0, stable, beta, nightly]
 
     steps:
     - uses: actions/checkout@master
