--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,6 @@ version = "0.4.22"
 default-features = false
 features = ["clock", "serde", "std"]
 
-[dev-dependencies.async-std]
-version = "1.12.0"
-features = ["attributes"]
+[dev-dependencies]
+async-std = { version = "1.12.0", features = ["attributes"] }
+
