--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,14 +19,10 @@ anyhow = "1.0.65"
 blake3 = "1.3.1"
 tracing = "0.1.37"
 
-[dependencies.serde]
-version = "1.0.145"
-features = ["rc", "derive"]
-
 [dependencies.chrono]
 version = "0.4.22"
 default-features = false
-features = ["clock", "serde", "std"]
+features = ["clock", "std"]
 
 [dev-dependencies]
 async-std = { version = "1.12.0", features = ["attributes"] }
