--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,7 +6,6 @@ on:
 
 env:
   RUSTFLAGS: -Dwarnings
-  MSRV: 1.65.0
 
 jobs:
   precheck_default:
@@ -106,7 +105,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        rust: [${{ env.MSRV }}, stable, beta, nightly]
+        rust: [1.65.0, stable, beta, nightly]
 
     steps:
       - uses: actions/checkout@master
