--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "typed-session"
 version = "0.1.0-alpha.13"
-license = "MIT OR Apache-2.0"
+license = "BSD-2-Clause"
 repository = "https://github.com/ISibboI/typed-session"
 documentation = "https://docs.rs/typed-session"
 description = "Async typed session middleware"
