--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ async-trait = "0.1.73"
 rand = "0.8.5"
 blake3 = "1.5.0"
 tracing = "0.1.37"
+thiserror = "1.0.48"
 
 [dependencies.chrono]
 version = "0.4.31"
