--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ rand = "0.8.5"
 blake3 = "1.5.0"
 tracing = "0.1.37"
 thiserror = "1.0.49"
+secure-string = "0.3.0"
 
 [dependencies.chrono]
 version = "0.4.31"
@@ -29,4 +30,3 @@ features = ["clock", "std"]
 
 [dev-dependencies]
 async-std = { version = "1.12.0", features = ["attributes"] }
-
